--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="blog-page.html">
     <title>Quiz Hero</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./index.js" defer></script>
@@ -46,7 +47,7 @@
             Get ready to Quiz and be amazed!
           </p>
         </div>
-        <button
+        <button onclick="location.href = 'blog-page.html';" id="myButton"
           class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white"
         >
           Blog
