ans of quiz-timer and choose-quiz function

--- a/blog-page.html
+++ b/blog-page.html
@@ -66,15 +66,15 @@
          </p>
         </div>
         <div id="block">
-         <p class="question">What type of work <b>quizTimer()</b> do?<span onclick='faq(this)' class="opener">+</span></p>
+         <p class="question">What type of work <b>quizTimer()</b> does?<span onclick='faq(this)' class="opener">+</span></p>
          <p class="answer">
-            An event loop is something that pulls stuff out of the queue and places it onto the function execution stack whenever the function stack becomes empty. Event loop continuously observes call stack and when it is empty it transfers task to call stack.		
+            	Quiz timer function sets times so that quizzer can complete	task in the set of time otherwise it wll dismiss.
          </p>
         </div>
         <div id="block">
-         <p class="question">What type of work <b>chooseQuiz()</b> do? <span onclick='faq(this)' class="opener">+</span></p>
+         <p class="question">What type of work <b>chooseQuiz()</b> does? <span onclick='faq(this)' class="opener">+</span></p>
          <p class="answer">
-            An event loop is something that pulls stuff out of the queue and places it onto the function execution stack whenever the function stack becomes empty. Event loop continuously observes call stack and when it is empty it transfers task to call stack.		
+            	Choose quiz function helps to find out right answer if it exists and provides quiz answer. 	
          </p>
         </div>
         
