--- a/blog-page.html
+++ b/blog-page.html
@@ -62,7 +62,7 @@
         <div id="block">
          <p class="question">What is <b>Event loop</b>? How does it work? <span onclick='faq(this)' class="opener">+</span></p>
          <p class="answer">
-            An event loop is something that pulls stuff out of the queue and places it onto the function execution stack whenever the function stack becomes empty. Event loop continuously observes call stack and when it is empty it transfers task to call stack.		
+            An event loop is something that pulls stuff out of the queue and places it onto the function execution stack whenever the function stack becomes empty.Mainly three concepts work on it: Stack, Heap and Queue. Event loop continuously observes call stack and when it is empty it transfers task to call stack.		
          </p>
         </div>
         <div id="block">
